# EuropaModdingTool

./: .gitignore  CMakeLists.txt  Journal.md  README.md  main.cpp
include/: builder.h  flags.h
src/: builder.cpp  loader.cpp  main.cpp  masterMenu.cpp
